--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,11 @@ addons:
     packages:
     - libpam-cracklib
 
+before_install:
+  - wget https://storage.googleapis.com/shellcheck/shellcheck-latest.linux.x86_64.tar.xz
+  - tar xf shellcheck-latest.linux.x86_64.tar.xz
+
 script:
+  - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck install.sh'
+  - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck SOURCES/mkcryptpasswd'
   - bash .travis/script.sh
