--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ env:
     - IMAGE=essentialkaos/perfecto:centos7
 
 before_install:
-  - wget https://storage.googleapis.com/shellcheck/shellcheck-latest.linux.x86_64.tar.xz
-  - tar xf shellcheck-latest.linux.x86_64.tar.xz
-  - ./shellcheck-latest/shellcheck --version
+  - wget https://storage.googleapis.com/shellcheck/shellcheck-stable.linux.x86_64.tar.xz
+  - tar xf shellcheck-stable.linux.x86_64.tar.xz
+  - ./shellcheck-stable/shellcheck --version
   - docker pull "$IMAGE"
   - wget https://kaos.sh/perfecto/perfecto-docker
   - chmod +x perfecto-docker
 
 script:
-  - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck install.sh'
-  - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck SOURCES/mkcryptpasswd'
+  - bash -c 'shopt -s globstar; ./shellcheck-stable/shellcheck install.sh'
+  - bash -c 'shopt -s globstar; ./shellcheck-stable/shellcheck SOURCES/mkcryptpasswd'
   - bash .travis/script.sh
   - ./perfecto-docker mkcryptpasswd.spec
