--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,12 @@ before_install:
   - wget https://github.com/koalaman/shellcheck/releases/download/v${SHELLCHECK_VERSION}/shellcheck-v${SHELLCHECK_VERSION}.linux.x86_64.tar.xz
   - tar xf shellcheck-v${SHELLCHECK_VERSION}.linux.x86_64.tar.xz
   - mv shellcheck-v${SHELLCHECK_VERSION} shellcheck-latest
-  - ./shellcheck-latest/shellcheck --version
   - docker pull "$IMAGE"
   - wget https://kaos.sh/perfecto/perfecto-docker
   - chmod +x perfecto-docker
   - bash <(curl -fsSL https://apps.kaos.st/get) bibop
+  - ./shellcheck-latest/shellcheck --version
+  - ./bibop --version
 
 script:
   - bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck install.sh'
