--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,14 +18,11 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v2
 
-      - name: Install bibop
-        run: bash <(curl -fsSL https://apps.kaos.st/get) bibop
-
-      - name: Print bibop version
-        run: ./bibop --version
-
-      - name: Run bibop tests
-        run: ./bibop -ip -p SOURCES .bibop/mkcryptpasswd.recipe
+      - name: Run test recipes with Bibop
+        uses: essentialkaos/bibop-action@v1
+        with:
+          path: SOURCES
+          recipe: .bibop/mkcryptpasswd.recipe
 
   Perfecto:
     name: Perfecto
@@ -43,20 +40,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Run Perfecto docker image
-        uses: docker://essentialkaos/perfecto:micro
+      - name: Check spec with Perfecto
+        uses: essentialkaos/perfecto-action@v1
         with:
-          args: --version
-
-      - name: Install perfecto-docker
-        run: |
-          wget https://kaos.sh/perfecto/perfecto-docker
-          chmod +x perfecto-docker
-
-      - name: Run Perfecto check
-        env:
-          IMAGE: essentialkaos/perfecto:micro
-        run: ./perfecto-docker mkcryptpasswd.spec
+          files: mkcryptpasswd.spec
 
   Shellcheck:
     name: Shellcheck
@@ -64,23 +51,11 @@ jobs:
 
     needs: Bibop
 
-    env:
-      SHELLCHECK_VERSION: 0.7.1
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Install Shellcheck
-        run: |
-          wget https://github.com/koalaman/shellcheck/releases/download/v${SHELLCHECK_VERSION}/shellcheck-v${SHELLCHECK_VERSION}.linux.x86_64.tar.xz
-          tar xf shellcheck-v${SHELLCHECK_VERSION}.linux.x86_64.tar.xz
-          mv shellcheck-v${SHELLCHECK_VERSION} shellcheck-latest
-
-      - name: Print Shellcheck version info
-        run: ./shellcheck-latest/shellcheck --version
-
-      - name: Check scripts
-        run: |
-          bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck install.sh'
-          bash -c 'shopt -s globstar; ./shellcheck-latest/shellcheck SOURCES/mkcryptpasswd'
+      - name: Check scripts with Shellcheck
+        uses: essentialkaos/shellcheck-action@v1
+        with:
+          files: install.sh SOURCES/mkcryptpasswd
