--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,3 +60,14 @@ jobs:
         uses: essentialkaos/shellcheck-action@v1
         with:
           files: SOURCES/mkcryptpasswd
+
+  Typos:
+    name: Typos
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Check spelling
+        uses: crate-ci/typos@master
